--- a/src/main/resources/static/css/cs.css
+++ b/src/main/resources/static/css/cs.css
@@ -21,8 +21,12 @@
 .pagination {
 	display: flex;
 	flex-direction: row;
+}	
+.navbar-nav {
+	margin-bottom: 20px !important;
+}	
 	
 /* cs 공지사항 */
 
 	
-}
+
