--- a/src/main/resources/static/css/cs.css
+++ b/src/main/resources/static/css/cs.css
@@ -25,6 +25,10 @@
 .navbar-nav {
 	margin-bottom: 20px !important;
 }	
+
+#header > div.login_register {
+	margin-bottom: 40px !important; 
+}
 	
 /* cs 공지사항 */
 
